crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__ipython_escape_command_assignment.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_jupyter_source(source)
---
## Tokens
```
[
    Identifier 0..3,
    Equal 4..5,
    IpyEscapeCommand 6..10,
    Newline 10..11,
    Identifier 11..14,
    Equal 15..16,
    IpyEscapeCommand 17..30,
    Newline 30..31,
    Identifier 31..34,
    Equal 35..36,
    IpyEscapeCommand 37..50,
    Newline 50..51,
    Identifier 51..54,
    Equal 55..56,
    IpyEscapeCommand 57..85,
    Newline 85..86,
    Identifier 86..89,
    Equal 90..91,
    IpyEscapeCommand 92..97,
    Newline 97..98,
    Identifier 98..102,
    Equal 103..104,
    IpyEscapeCommand 105..110,
    Newline 110..110,
]
```
