crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__ipython_escape_command_line_continuation_unix_eol.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: ipython_escape_command_line_continuation_eol(UNIX_EOL)
---
## Tokens
```
[
    IpyEscapeCommand 0..24,
    Newline 24..24,
]
```
