crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__ipython_escape_command_line_continuation_windows_eol.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: ipython_escape_command_line_continuation_eol(WINDOWS_EOL)
---
## Tokens
```
[
    IpyEscapeCommand 0..25,
    Newline 25..25,
]
```
