crates/nuff_python_parser/src/snapshots/nuff_python_parser__lexer__tests__ipython_help_end_escape_command.snap
---
source: crates/nuff_python_parser/src/lexer.rs
expression: lex_jupyter_source(source)
---
## Tokens
```
[
    IpyEscapeCommand 0..5,
    Newline 5..6,
    IpyEscapeCommand 6..15,
    Newline 15..16,
    IpyEscapeCommand 16..27,
    Newline 27..28,
    IpyEscapeCommand 28..34,
    Newline 34..35,
    IpyEscapeCommand 35..42,
    Newline 42..43,
    IpyEscapeCommand 43..50,
    Newline 50..51,
    IpyEscapeCommand 51..59,
    Newline 59..60,
    IpyEscapeCommand 60..68,
    Newline 68..69,
    IpyEscapeCommand 69..78,
    Newline 78..79,
    IpyEscapeCommand 79..92,
    Newline 92..93,
    IpyEscapeCommand 93..99,
    Newline 99..100,
    IpyEscapeCommand 100..104,
    Newline 104..105,
    IpyEscapeCommand 105..110,
    Newline 110..111,
    IpyEscapeCommand 111..117,
    Newline 117..118,
    IpyEscapeCommand 118..126,
    Newline 126..127,
    IpyEscapeCommand 127..132,
    Newline 132..132,
]
```
